@@ -1,4 +1,4 @@
-FROM openjdk:20
+FROM oracle/jdk:21
 
 EXPOSE 8080
 
@@ -6,4 +6,4 @@ WORKDIR /app
 
 COPY target/gear-planner-server-1.0-SNAPSHOT.jar /app/app.jar
 
-ENTRYPOINT ["java", "--enable-preview", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
